--- a/style.css
+++ b/style.css
@@ -16,27 +16,26 @@ li {
   a {
     display: block;
     color: white;
+    font-family: 'Krungthep';
     text-align: center;
-    justify-content: space-between;
-    padding: 18px 20px;
+    padding: 25px 27px;
     text-decoration: none;
 }
-
+img {
+    width: 80%;
+}
 body {
     background: rgb(26,6,101);
     background: linear-gradient(90deg, rgba(26,6,101,1) 0%, rgba(61,87,201,1) 75%, rgba(74,110,233,1) 100%);
+    margin: 25px;
 }
 h1 {
-    position: absolute;
-    width: 510px;
-    height: 145px;
-    left: 450px;
-    top: -20px;
-
-    font-family: 'Enter Sansman';
+    font-family: 'Krungthep';
     font-style: normal;
-    font-weight: 700;
-    font-size: 55px;
+    font-weight: 750;
+    font-size: 75px;
+
+    color: #FFFFFF;  
 }
 h2 {
     font-family: 'Krungthep';
@@ -47,6 +46,7 @@ h2 {
     text-align: center;
 
     color: #FFFFFF;  
+
 }
 h3 {
     font-family: 'Silom';
@@ -58,6 +58,16 @@ h3 {
 
     color: #FFFFFF;
 }
+h4 {
+    font-family: 'Krungthep';
+    font-style: normal;
+    font-weight: 380;
+    font-size: 22px;
+    line-height: 35px;
+    text-align: left;
+
+    color: #FFFFFF;    
+}
 p {
     font-family: 'Inconsolata';
     font-style: normal;
@@ -68,11 +78,25 @@ p {
 
     color: #FFFFFF;
 }
+article {
+    font-family: 'Inconsolata';
+    font-style: normal;
+    font-weight: 150;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: left;
+
+    color: #FFFFFF;
+}
+div {
+    width: 50%;
+    margin: 20px;
+}
 .flex-me {
     display: flex;
 }
 .flex-me div{
-    flex-wrap: 10;
+    flex-wrap: 1;
     justify-content: space-evenly;
 }
 .flex-games {
@@ -81,4 +105,21 @@ p {
 .flex-games {
     flex-wrap: 10;
     justify-content:space-evenly;
+}
+.flex-article {
+    display: flex;
+    text-align: left;
+}
+
+.flex-me div {
+    flex: 30;
+}
+
+.button-box {
+    display: flex;
+    width: 100%;
+}
+.button-box div {
+    flex: 10;
+    justify-content: space-evenly;
 }
