--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h4 {
     color: #FFFFFF;    
 }
 p {
-    font-family: 'Inconsolata';
+    font-family: 'PT Sans';
     font-style: normal;
     font-weight: 300;
     font-size: 22px;
@@ -78,7 +78,7 @@ p {
     color: #FFFFFF;
 }
 article {
-    font-family: 'Inconsolata';
+    font-family: 'PT Sans';
     font-style: normal;
     font-weight: 150;
     font-size: 20px;
