--- a/style.css
+++ b/style.css
@@ -1,18 +1,8 @@
-ul {
-    position: absolute;
-    width: 1400px;
-    height: 90px;
-    left: 0px;
-    top: -20px;
+nav ul {
+    display: flex;
     background-color: #1B0738;
+    padding: 40px 0px 20px 0px
 }
-li {
-    display: inline;
-  }
-li {
-    float: left;
-  }
-  
   a {
     display: block;
     color: white;
@@ -26,8 +16,8 @@ img {
 }
 body {
     background: rgb(26,6,101);
-    background: linear-gradient(90deg, rgba(26,6,101,1) 0%, rgba(61,87,201,1) 75%, rgba(74,110,233,1) 100%);
-    margin: 25px;
+    background: linear-gradient(180deg, rgba(26,6,101,1) 0%, rgba(61,87,201,1) 75%, rgba(74,110,233,1) 100%);
+    height: 100%;
 }
 h1 {
     font-family: 'Krungthep';
@@ -117,9 +107,9 @@ div {
 
 .button-box {
     display: flex;
-    width: 100%;
+    width: auto 100%;
 }
 .button-box div {
-    flex: 10;
+    flex: 5;
     justify-content: space-evenly;
 }
