--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 nav ul {
   display: flex;
   background-color: #1b0738;
-  padding: 40px 0px 20px 0px;
+  padding: 40px 0px 10px 0px;
 }
 .homepage nav ul {
   justify-content: center;
@@ -32,9 +32,8 @@ h1 {
 h2 {
   font-family: 'Krungthep';
   font-style: normal;
-  font-weight: 380;
-  font-size: 22px;
-  line-height: 15px;
+  font-size: 30px;
+  padding-bottom: 30px;
   text-align: center;
 
   color: #ffffff;
@@ -42,9 +41,7 @@ h2 {
 h3 {
   font-family: 'Silom';
   font-style: normal;
-  font-weight: 400;
   font-size: 20px;
-  line-height: 31px;
   text-align: center;
 
   color: #ffffff;
@@ -52,11 +49,10 @@ h3 {
 h4 {
   font-family: 'Krungthep';
   font-style: normal;
-  font-weight: 380;
   font-size: 22px;
-  line-height: 35px;
   text-align: left;
   margin-bottom: 32px;
+
   color: #ffffff;
 }
 p {
@@ -65,7 +61,7 @@ p {
   font-weight: 300;
   font-size: 22px;
   line-height: 35px;
-  text-align: right;
+  text-align: left;
   margin-bottom: 32px;
   color: #ffffff;
 }
@@ -84,7 +80,7 @@ article {
   margin: 20px;
 }
 .homepage .flex-me {
-  padding: 80px 60px;
+  padding: 90px 60px;
 }
 .homepage .flex-me .left {
   margin-right: 80px;
@@ -97,6 +93,7 @@ article {
 }
 
 .flex-games {
+  padding-bottom: 50px;
   display: flex;
 }
 .flex-games {
@@ -106,7 +103,6 @@ article {
 .flex-article {
   padding: 60px;
   display: flex;
-  text-align: left;
 }
 .flex-article img {
   display: inline-block;
@@ -117,6 +113,7 @@ article {
 }
 
 .button-box {
+  padding-bottom: 50px;
   display: flex;
   width: auto 100%;
 }
@@ -125,5 +122,5 @@ article {
   justify-content: space-evenly;
 }
 .button-box img:hover {
-  filter: hue-rotate(180deg);
+  filter: hue-rotate(15deg);
 }
