--- a/style.css
+++ b/style.css
@@ -120,6 +120,9 @@ article {
   flex: 5;
   justify-content: space-evenly;
 }
+.button-box img {
+  width: 85%;
+}
 .button-box img:hover {
   filter: hue-rotate(15deg);
 }
