--- a/style.css
+++ b/style.css
@@ -114,28 +114,30 @@ article {
 
 .button-box {
   padding-bottom: 50px;
-  display: flex;
   width: auto 100%;
 }
-.button-box div {
-  flex: 5;
-  justify-content: space-evenly;
-  position: relative;
-}
-.button-box img {
-}
-.button-box img:hover {
-  /* filter: hue-rotate(15deg); */
-}
-.butt-hov {
-  /*fill: #9a08d7;*/
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
 
-.butt-hov:hover {
-  /*fill: #9a08d7;*/
-  opacity: 1;
+/* alanna's css buttons */
+.play {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  width: 100%;
+}
+.play li {
+  flex: 1;
+  font-size: 56px;
+  font-weight: 700;
+  font-family: 'Krungthep';
+  background-color: rgba(99, 15, 171, 1);
+  border-radius: 60px;
+  padding: 8px 16px;
+  margin: 0 50px;
+}
+.play li:hover {
+  background-color: rgba(91, 212, 239, 1);
+}
+.play a {
+  text-decoration: none;
+  color: #fff;
 }
